<resources>
    <string name="app_name">Guild Wars 2 Boss Timer</string>
    <string name="action_about">about</string>

    <string name="items_title"></string>
    <string name="item_name">World boss name</string>
    <string name="item_eventTime">00:00:00</string>
    <string name="item_location">Lion Arch</string>
    <string name="item_waypoint">[$waypoint]</string>
    <string name="item_preTitle">Pre event:</string>
    <string name="item_pre">pre event</string>
    <string name="item_preLocation">Rata nova</string>
    <string name="item_preWaypoint">[$anotherwaypoint]</string>

    <string name="title_activity_about">About</string>
    <string name="about_description">©2010–2015 ArenaNet, LLC. All rights reserved. Guild Wars, Guild Wars 2, Guild Wars 2: Heart of Thorns, ArenaNet, NCSOFT, the Interlocking NC Logo, and all associated logos and designs are trademarks or registered trademarks of NCSOFT Corporation. All other trademarks are the property of their respective owners.</string>
    <string name="themeToggle">test</string>
</resources>
