<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/nameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:text="@string/item_name"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/eventTimeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_below="@id/nameTextView"
        android:text="@string/item_eventTime"
        android:textSize="20sp" />
    <TextView
        android:id="@+id/locationTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_below="@+id/eventTimeTextView"
        android:text="@string/item_location"
        android:textSize="20sp" />
    <TextView
        android:id="@+id/waypointTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_below="@+id/locationTextView"
        android:text="@string/item_waypoint"
        android:textSize="20sp" />
    <TextView
        android:id="@+id/preTitleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_below="@+id/waypointTextView"
        android:text="@string/item_preTitle"
        android:textSize="24sp" />
    <TextView
        android:id="@+id/preTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_below="@+id/preTitleTextView"
        android:text="@string/item_pre"
        android:textSize="20sp" />
    <TextView
        android:id="@+id/preLocationTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_below="@+id/preTextView"
        android:text="@string/item_preLocation"
        android:textSize="20sp" />
    <TextView
        android:id="@+id/preWaypointTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_below="@+id/preLocationTextView"
        android:text="@string/item_preWaypoint"
        android:textSize="20sp" />
</RelativeLayout>